--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.owtelse.util</groupId>
   <artifactId>urlsigner</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   <packaging>jar</packaging>
 
     <name>URLSigner</name>
@@ -33,7 +32,7 @@
         <url>https://github.com/karlroberts/urlsigner</url>
         <connection>scm:git:git://github.com/karlroberts/urlsigner.git</connection>
         <developerConnection>scm:git:git@github.com:karlroberts/urlsigner.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>urlsigner-1.0.1</tag>
     </scm>
 
 
